Wed Jan 27 05:33:56 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-iphone-hardware.h:

          undefined ACE_HAS_SYSV_IPC, it doesn't seem that the 
          iphone-hardware platform supports it.

Tue Jan 26 22:55:18 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/config/ace_mc.mpb:

          Assign to LDLIBS along with ACE_SHLIBS.  ACE_SHLIBS is only used
          when building a shared library, LDLIBS is used for an executable.

Tue Jan 26 19:53:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Process_Test.cpp:
          Log some more details to get an insight why this test fails on
          some systems

Tue Jan 26 18:04:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_rel_manpages:
          Doxygen is upgraded to 1.6.2

Tue Jan 26 17:02:51 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (unbind_all): When shutting down, call
          handle_close() on all registered handlers. Fixes Bugzilla 2750.

Tue Jan 26 13:27:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_common.GNU:
          tao_idl3_to_idl2 is located in HOST_ROOT/TAO/CIAO/bin with
          cross compilation

Tue Jan 26 12:52:57 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-leopard.h:

          Added ACE_HAS_NET_IF_DL_H macro.

        * ace/os_include/net/os_if.h:

          Removed hardcoding of ACE_HAS_IPHONE and ACE_HAS_MAC_OSX
          checks. If the platform defines ACE_HAS_NET_IF_DL_H macro,
          then <net/if_dl.h> will be included.

Tue Jan 26 04:35:17 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-leopard.h:

          Added ACE_HAS_MAC_OSX macro.

        * ace/OS_NS_netdb.cpp:
        * ace/os_include/net/os_if.h:

          Enabled ACE_OS::getmacaddress() for Mac OSX as well.