@@ -1,8 +1,18 @@
+Wed Jan 27 22:36:36 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * include/makeinclude/platform_win32_msvc.GNU:
+
+          Trim trailing slashes from libpath entries.
+
+        * tests/Bug_3709_Regression_Test.cpp:
+
+          This test doesn't compile on MSVC 7.1.
+
 Wed Jan 27 05:33:56 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>
 
         * ace/config-macosx-iphone-hardware.h:
 
-          undefined ACE_HAS_SYSV_IPC, it doesn't seem that the 
+          undefined ACE_HAS_SYSV_IPC, it doesn't seem that the
           iphone-hardware platform supports it.
 
 Tue Jan 26 22:55:18 UTC 2010  Adam Mitz  <mitza@ociweb.com>
